# bettgbot

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: .gitkeep  auto-handoff-pr.yml  backup-verify.yml  build-images.yml  ci.yml  deploy-prod.yml  handoff-consistency.yml  security-image-scan.yml
docs/: 00-overview.md  01-architecture.md  02-tech-stack.md  03-data-model.md  04-bot-flows.md  05-admin-spec.md  06-external-api.md  07-deployment.md  08-conventions.md  runbook-dr.md
docs/adr/: 0001-tech-stack.md  0002-monorepo-layout.md  0003-handoff-protocol.md  0004-no-build-backend.md  0005-admin-v2-stack.md  0006-open-registration.md
docs/audit/: 2026-05-25-mvp-audit.md  2026-05-30-design-audit.md  2026-05-30-full-audit.md  2026-05-31-full-audit.md
handoff/: README.md
handoff/archive/: .gitkeep  TASK-032.md  TASK-044.md  TASK-056.md
handoff/inbox/: TASK-001-init-repo.in-progress.md  TASK-002-tooling.in-progress.md  TASK-004-config-logging.md  TASK-005-orm-models.md  TASK-006-db-alembic-init.md  TASK-007-repositories.md  TASK-009-services.md  TASK-010-bot-bootstrap.md  TASK-011-start-handler.md  TASK-012-events-handler.md  TASK-013-prediction-flow.in-progress.md  TASK-014-my-predictions.md  TASK-015-reminders.md  TASK-016-help-and-exception-refactor.md  TASK-018-amendment.md  TASK-018-scheduler-archive.blocked.md  TASK-021-admin-categories.in-progress.md  TASK-022-admin-events.in-progress.md  TASK-025-admin-users.md  TASK-027-amendment.md  TASK-028-cleanup-and-local-drive-backup.md  TASK-030.in-progress.md  TASK-033-outcomes-idor-fix.md  TASK-034-prod-secrets-validation.in-progress.md  TASK-035-csrf-rotation.md  TASK-036-telegram-html-escape.md  TASK-037-security-headers-csp.md  TASK-038-proxy-headers-nginx-ratelimit.md  TASK-040-ci-security-scans.md  TASK-041-sentry-healthchecks.md  TASK-046-drop-drive-backup.md  TASK-047-prod-http-login-leak.md  TASK-048-reminder-dispatch-log-retention-indexes.md  TASK-049-reminder-window-misfire-catchup.md  TASK-050-env-file-secret-segregation.md  TASK-052-handoff-ci-hardening-and-task-051-followup.md  TASK-053-admin-v2-design-foundation.md  TASK-055-admin-v2-categories-events.in-progress.md  TASK-055-admin-v2-categories-events.md  TASK-056-admin-v2-users-audit.md  (+44 more)
handoff/outbox/: .gitkeep  TASK-001-report.md  TASK-002-report.md  TASK-003-report.md  TASK-004-report.md  TASK-005-report.md  TASK-006-report.md  TASK-007-report.md  TASK-008-report.md  TASK-009-report.md  TASK-010-report.md  TASK-011-report.md  TASK-012-report.md  TASK-013-report.md  TASK-014-report.md  TASK-015-report.md  TASK-016-report.md  TASK-017-report.md  TASK-018-report.md  TASK-019-report.md  TASK-020-report.md  TASK-021-report.md  TASK-022-report.md  TASK-023-report.md  TASK-024-report.md  TASK-025-report.md  TASK-026-report.md  TASK-027-report.md  TASK-028-report.md  TASK-029-report.md  TASK-030-report.md  TASK-031-report.md  TASK-032-report.md  TASK-033-report.md  TASK-034-report.md  TASK-035-report.md  TASK-036-report.md  TASK-037-report.md  TASK-038-report.md  TASK-039-report.md  (+59 more)
handoff/templates/: report.md  task.md
infra/: .env.bot.example  .env.db.example  .env.example  .env.prod.example  .env.web.example  Dockerfile.bot  Dockerfile.db-backup  Dockerfile.web  docker-compose.bot-only.yml  docker-compose.expose-db.yml  docker-compose.override.yml  docker-compose.prod-no-domain.yml  docker-compose.prod.yml  docker-compose.yml  mock-registry.yml
infra/nginx/: admin-bootstrap.conf  admin-no-domain.conf  admin.conf  admin.conf.template
scripts/: .gitkeep  apply-bot-firewall.sh  backup-to-drive.sh  create_admin.py  deploy-to-vps-plink.bat  deploy-to-vps.ps1  deploy-to-vps.sh  deploy-vps.bat  generate_build_info.sh  smoke_test.sh
sessions/: README.md
sessions/2026-05-22-01-project-bootstrap/: brief.md  decisions.md
sessions/2026-05-22-02-task-001-review/: brief.md  decisions.md
sessions/2026-05-23-01-task-002-review/: brief.md  decisions.md
sessions/2026-05-23-02-task-003-review/: brief.md  decisions.md
sessions/2026-05-23-03-task-004-review/: brief.md  decisions.md
sessions/2026-05-23-04-task-005-review/: brief.md  decisions.md
sessions/2026-05-23-05-task-006-review/: brief.md  decisions.md
sessions/2026-05-23-06-task-007-review/: brief.md  decisions.md
sessions/2026-05-23-07-task-008-review/: brief.md  decisions.md
sessions/2026-05-23-08-task-009-review/: brief.md  decisions.md
sessions/2026-05-23-09-task-010-review/: brief.md  decisions.md
sessions/2026-05-23-10-task-011-review/: brief.md  decisions.md
sessions/2026-05-23-11-task-012-review/: brief.md  decisions.md
sessions/2026-05-23-12-task-013-review/: brief.md  decisions.md
sessions/2026-05-23-13-task-014-review/: brief.md  decisions.md
sessions/2026-05-24-01-task-015-review/: brief.md  decisions.md
sessions/2026-05-24-02-task-016-review/: brief.md  decisions.md
sessions/2026-05-24-03-task-017-review/: brief.md  decisions.md
sessions/2026-05-24-04-task-018-block-resolution/: brief.md  decisions.md
sessions/2026-05-24-05-task-018-review/: brief.md  decisions.md
sessions/2026-05-24-06-task-019-review/: brief.md  decisions.md
sessions/2026-05-24-07-task-020-review/: brief.md  decisions.md
sessions/2026-05-24-08-task-021-review/: brief.md  decisions.md
sessions/2026-05-24-09-task-022-review/: brief.md  decisions.md
sessions/2026-05-24-10-task-023-review/: brief.md  decisions.md
sessions/2026-05-24-11-task-024-review/: brief.md  decisions.md
sessions/2026-05-24-12-task-025-review/: brief.md  decisions.md
sessions/2026-05-24-13-task-026-review/: brief.md  decisions.md
sessions/2026-05-25-01-task-027-review/: brief.md  decisions.md
sessions/2026-05-25-02-task-028-review/: brief.md  decisions.md
sessions/2026-05-25-03-task-029-review/: brief.md  decisions.md
src/: __init__.py
src/admin/: .gitkeep  (+5 more)
state/: BACKLOG.md  DECISIONS.md  GLOSSARY.md  PROJECT_STATUS.md
(+296 files in other folders)
