[project]
name = "bettgbot"
version = "0.0.0"
description = "Telegram-бот приёма прогнозов на события с минимальной веб-админкой"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
  "aiogram>=3.5,<4",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29,<1",
  "jinja2>=3.1,<4",
  "sqlalchemy[asyncio]>=2.0,<3",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "redis>=5.0,<7",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "passlib[bcrypt]>=1.7,<2",
  "itsdangerous>=2.2,<3",
  "apscheduler>=3.10,<4",
  "structlog>=24.1,<26",
  "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "factory-boy>=3.3,<4",
  "freezegun>=1.5,<2",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<5",
  "types-passlib",
  "types-pyyaml",
]

[tool.uv]
# Это сервис, не библиотека: wheel не собираем, поэтому build-backend не нужен,
# а src.* пакеты подключаются через PYTHONPATH (см. [tool.pytest.ini_options]).
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pyflakes / pycodestyle
  "I",                # isort
  "UP",               # pyupgrade
  "B",                # bugbear
  "ASYNC",            # async-смыслы
  "RUF",
  "SIM",              # simplify
]
ignore = [
  "E501",             # длину строки следит format
  "RUF001",           # ambiguous unicode (кириллица в строках) — у нас русский UI/тексты
  "RUF002",           # ambiguous unicode в docstring — то же
  "RUF003",           # ambiguous unicode в комментариях — то же
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F401"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
# strict только для shared/; для bot и admin — отдельные секции ниже снижают строгость
files = ["src/shared"]

[[tool.mypy.overrides]]
module = ["src.bot.*", "src.admin.*"]
disallow_untyped_defs = false
strict_optional = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
markers = [
  "integration: tests requiring a real database (run in separate CI job)",
]
