[project]
name = "bettgbot"
version = "0.2.2"
description = "Telegram-бот приёма прогнозов на события с минимальной веб-админкой"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
  "aiogram>=3.5,<4",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.29,<1",
  "jinja2>=3.1,<4",
  "sqlalchemy[asyncio]>=2.0,<3",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "redis>=5.0,<7",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "bcrypt>=4.1,<6",
  "fastapi-limiter>=0.1.6,<0.2",
  "fastapi-csrf-protect>=1.0,<2",
  "python-multipart>=0.0.9,<1",
  "itsdangerous>=2.2,<3",
  "apscheduler>=3.10,<4",
  "structlog>=24.1,<26",
  "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
  "pytest>=8.2,<10",
  "pytest-asyncio>=0.23,<2",
  "factory-boy>=3.3,<4",
  "freezegun>=1.5,<2",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
  "pathspec>=0.11,<1.2",
  "pre-commit>=3.7,<5",
  "types-pyyaml",
  "bandit>=1.7,<2",
  "pip-audit>=2.0,<3",
]

[tool.uv]
# Это сервис, не библиотека: wheel не собираем, поэтому build-backend не нужен,
# а src.* пакеты подключаются через PYTHONPATH (см. [tool.pytest.ini_options]).
package = false

# Override for transitive aiohttp (aiogram declares <3.14; we need 3.14.0+ for CVE fixes).
# See TASK-110.
override-dependencies = [
    "aiohttp>=3.14.0,<4",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pyflakes / pycodestyle
  "I",                # isort
  "UP",               # pyupgrade
  "B",                # bugbear
  "ASYNC",            # async-смыслы
  "RUF",
  "SIM",              # simplify
]
ignore = [
  "E501",             # длину строки следит format
  "RUF001",           # ambiguous unicode (кириллица в строках) — у нас русский UI/тексты
  "RUF002",           # ambiguous unicode в docstring — то же
  "RUF003",           # ambiguous unicode в комментариях — то же
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F401"]
# FastAPI Depends/Form/Query/etc. в дефолтах — стандартный паттерн, не B008.
"src/admin/routes/**" = ["B008"]
"src/admin/routes/*.py" = ["B008"]
"src/admin/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
# strict только для shared/; для bot и admin — отдельные секции ниже снижают строгость
files = ["src/shared"]

[[tool.mypy.overrides]]
module = ["src.bot.*", "src.admin.*"]
disallow_untyped_defs = false
strict_optional = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentry_sdk", "sentry_sdk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.shared.config"]
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
markers = [
  "integration: tests requiring a real database (run in separate CI job)",
]

[tool.bandit]
# Базовые проверки для SAST
skips = ["B101", "B601"]  # B101: assert_used (pytest), B601: paramiko_calls (не используем)
exclude_dirs = ["tests/", ".venv/", "build/"]
# Полезно для позже, когда будут найдены конкретные false-positives
# assert_used в тестах — нормально, B101 пропускаем через skips
